--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
